Add 2 missing songs (April 2023)

--- a/ragnachooser/index.html
+++ b/ragnachooser/index.html
@@ -228,7 +228,9 @@
 			"OST Volume 2 - Out Of Control",
 			"OST Volume 2 - Redneck Vikings From Hell",
 			"OST Volume 2 - Utopia",
-			"OST Volume 2 - We Are The Fire"
+			"OST Volume 2 - We Are The Fire",
+			"OST Volume 2 - Metal United",
+			"OST Volume 2 - Powersnake"
 		];
 	var songListGH = [
 			"Gloryhammer Raid - Gloryhammer",
@@ -302,7 +304,9 @@
 			"OST Volume 2 - Out Of Control",
 			"OST Volume 2 - Redneck Vikings From Hell",
 			"OST Volume 2 - Utopia",
-			"OST Volume 2 - We Are The Fire"
+			"OST Volume 2 - We Are The Fire",
+			"OST Volume 2 - Metal United",
+			"OST Volume 2 - Powersnake"
 		];
 	
 		function updateCount(){
