--- a/pb/indexview.html
+++ b/pb/indexview.html
@@ -35,7 +35,7 @@
             <img src="img/icons/back.png" alt="ICON">
           </td>
           <td>
-            <a href="index.html">Parent Directory</a>
+            <a href="../" target="_top">Parent Directory</a>
           </td>
           <td>&nbsp;</td>
           <td align="right"> - </td>
@@ -46,7 +46,7 @@
             <img src="img/icons/win/webdoc.png" alt="ICON">
           </td>
           <td>
-            <a href="/ascender">/ascender.rtf</a>
+            <a href="/ascender" target="_top">/ascender.rtf</a>
           </td>
           <td align="right">2021-04-12 01:11 </td>
           <td align="right">8.06 MB</td>
@@ -57,7 +57,7 @@
             <img src="img/icons/win/lnk.png" alt="ICON">
           </td>
           <td>
-            <a href="/bifrost">/bifrost.lnk</a>
+            <a href="/bifrost" target="_top">/bifrost.lnk</a>
           </td>
           <td align="right">2023-05-01 15:40 </td>
           <td align="right">5.29 KB</td>
@@ -68,7 +68,7 @@
             <img src="img/icons/win/exe.png" alt="ICON">
           </td>
           <td>
-            <a href="/bifrost-legacy">/bifrost-legacy.exe</a>
+            <a href="/bifrost-legacy" target="_top">/bifrost-legacy.exe</a>
           </td>
           <td align="right">2023-04-04 10:25 </td>
           <td align="right">27.9 MB</td>
@@ -79,7 +79,7 @@
             <img src="img/icons/win/exe.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/1filesokoban">/projects/1filesokoban.com</a>
+            <a href="/projects/1filesokoban" target="_top">/projects/1filesokoban.com</a>
           </td>
           <td align="right">2021-04-12 01:30 </td>
           <td align="right">36.1 KB</td>
@@ -90,7 +90,7 @@
             <img src="img/icons/win/exe.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/bigclive">/projects/bigclive.exe</a>
+            <a href="/projects/bigclive" target="_top">/projects/bigclive.exe</a>
           </td>
           <td align="right">2021-04-12 01:25 </td>
           <td align="right">846 KB</td>
@@ -101,7 +101,7 @@
             <img src="img/icons/win/exe.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/namegen">/projects/namegen.exe</a>
+            <a href="/projects/namegen" target="_top">/projects/namegen.exe</a>
           </td>
           <td align="right">2022-11-13 15:22 </td>
           <td align="right">4.28 KB</td>
@@ -112,7 +112,7 @@
             <img src="img/icons/win/exe.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/pangram">/projects/pangram.exe</a>
+            <a href="/projects/pangram" target="_top">/projects/pangram.exe</a>
           </td>
           <td align="right">2021-04-12 11:32 </td>
           <td align="right">10.5 KB</td>
@@ -123,7 +123,7 @@
             <img src="img/icons/win/exe.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/QMK/SongWriter">/projects/QMK/SongWriter.exe</a>
+            <a href="/projects/QMK/SongWriter" target="_top">/projects/QMK/SongWriter.exe</a>
           </td>
           <td align="right">2022-11-13 15:22 </td>
           <td align="right">10.9 KB</td>
@@ -134,7 +134,7 @@
             <img src="img/icons/win/jpg.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/time">/projects/time.svg</a>
+            <a href="/projects/time" target="_top">/projects/time.svg</a>
           </td>
           <td align="right">2021-04-13 12:23 </td>
           <td align="right">24.1 KB</td>
@@ -145,7 +145,7 @@
             <img src="img/icons/win/html.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/trash/OWLoader">/projects/trash/OWLoader.htm</a>
+            <a href="/projects/trash/OWLoader" target="_top">/projects/trash/OWLoader.htm</a>
           </td>
           <td align="right">2021-04-12 12:03 </td>
           <td align="right">13.6 MB</td>
@@ -156,7 +156,7 @@
             <img src="img/icons/win/html.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/unimpressive-videos">/projects/unimpressive-videos.htm</a>
+            <a href="/projects/unimpressive-videos" target="_top">/projects/unimpressive-videos.htm</a>
           </td>
           <td align="right">2022-11-13 15:22 </td>
           <td align="right">64.5 KB</td>
@@ -167,7 +167,7 @@
             <img src="img/icons/win/html.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/yubiclock/Yubiclock.html">/projects/yubiclock/Yubiclock.htm</a>
+            <a href="/projects/yubiclock/Yubiclock.html" target="_top">/projects/yubiclock/Yubiclock.htm</a>
           </td>
           <td align="right">2021-04-12 01:11 </td>
           <td align="right">11.3 KB</td>
@@ -178,7 +178,7 @@
             <img src="img/icons/win/html.png" alt="ICON">
           </td>
           <td>
-            <a href="/projects/yubiclock/Yubiclock-mobi.html">/projects/yubiclock/Yubiclock-mobi.htm</a>
+            <a href="/projects/yubiclock/Yubiclock-mobi.html" target="_top">/projects/yubiclock/Yubiclock-mobi.htm</a>
           </td>
           <td align="right">2021-04-13 12:23 </td>
           <td align="right">24.1 KB</td>
@@ -189,7 +189,7 @@
             <img src="img/icons/win/zip.png" alt="ICON">
           </td>
           <td>
-            <a href="/future">/OVERW~01.zip</a>
+            <a href="/future" target="_top">/OVERW~01.zip</a>
           </td>
           <td align="right">2076-07-05 16:22 </td>
           <td align="right">-13.4 B</td>
@@ -200,7 +200,7 @@
             <img src="img/icons/win/mp4.png" alt="ICON">
           </td>
           <td>
-            <a href="/impasse">impasse.mp4</a>
+            <a href="/impasse" target="_top">impasse.mp4</a>
           </td>
           <td align="right">1980-01-01 00:00 </td>
           <td align="right">103.4 PB</td>
@@ -211,7 +211,7 @@
             <img src="img/icons/win/iso.png" alt="ICON">
           </td>
           <td>
-            <a href="/tribute/index.html">WE_ARE_BACK.iso</a>
+            <a href="/tribute/index.html" target="_top">WE_ARE_BACK.iso</a>
           </td>
           <td align="right">2021-04-12 01:11 </td>
           <td align="right">7.63 MB</td>
