--- a/pb/indexview.html
+++ b/pb/indexview.html
@@ -184,6 +184,28 @@
           <td align="right">24.1 KB</td>
           <td>&nbsp;</td>
         </tr>
+          <tr>
+          <td valign="top">
+            <img src="img/icons/win/html.png" alt="ICON">
+          </td>
+          <td>
+            <a href="/ragnachooser" target="_top">ragnachooser.htm</a>
+          </td>
+          <td align="right">2023-06-15 12:23 </td>
+          <td align="right">102 KB</td>
+          <td>&nbsp;</td>
+        </tr>
+          <tr>
+          <td valign="top">
+            <img src="img/icons/win/html.png" alt="ICON">
+          </td>
+          <td>
+            <a href="/ragnachooser2" target="_top">ragnachooser2.htm</a>
+          </td>
+          <td align="right">2023-07-25 01:07 </td>
+          <td align="right">24.1 KB</td>
+          <td>&nbsp;</td>
+        </tr>
         <tr>
           <td valign="top">
             <img src="img/icons/win/zip.png" alt="ICON">
