Add new songs (RagnaChooser)
Happy Halloween!

--- a/ragnachooser/index.html
+++ b/ragnachooser/index.html
@@ -330,7 +330,9 @@
 			"OST Volume 2 - Utopia",
 			"OST Volume 2 - We Are The Fire",
 			"OST Volume 2 - Metal United",
-			"OST Volume 2 - Powersnake"
+			"OST Volume 2 - Powersnake",
+			"OST Volume 2 - Sanaton Maa",
+			"OST Volume 2 - Only Human"
 		];
 	
 		function updateCount(){
@@ -395,7 +397,7 @@
 			var outputDOM = document.getElementById("output");
 			var result = "";
 			if (songCount == 0){
-				outputDOM.innerHTML = "Ragnarock by Wanadev Studio<br>This tool made by Blackbeard<br>Under 2 hours from start to end<br>Version 1.5.3<br>Thank you for using my tool!<br>Hope you have fun.<br><br>Special thanks to Nicolas!<br><br>Please check and uncheck any of the Raids to generate playlist after this."
+				outputDOM.innerHTML = "Ragnarock by Wanadev Studio<br>This tool made by Blackbeard<br>Under 2 hours from start to end<br>Version 1.7.0<br>Thank you for using my tool!<br>Hope you have fun.<br><br>Special thanks to Nicolas!<br><br>Please check and uncheck any of the Raids to generate playlist after this."
 			}
 			if (songCount > intermediatePL.length) {
 				songCount = intermediatePL.length;
