--- a/ragnachooser2/index.html
+++ b/ragnachooser2/index.html
@@ -725,7 +725,9 @@
                 {name: "OST Volume 2 - Powersnake", dlc: "v2", diff: 18, diffList: [4, 6, 8]},
                 {name: "OST Volume 2 - Redneck Vikings From Hell", dlc: "v2", diff: 20, diffList: [3, 7, 10]},
                 {name: "OST Volume 2 - Utopia", dlc: "v2", diff: 15, diffList: [2, 5, 8]},
-                {name: "OST Volume 2 - We Are The Fire", dlc: "v2", diff: 17, diffList: [3, 6, 8]}
+                {name: "OST Volume 2 - We Are The Fire", dlc: "v2", diff: 17, diffList: [3, 6, 8]},
+				{name: "OST Volume 2 - Sanaton Maa", dlc: "v2", diff: 16, diffList: [2, 6, 8]},
+				{name: "OST Volume 2 - Only Human", dlc: "v2", diff: 18, diffList: [2, 6, 10]}
             ];
             
             // Greetz: dubmood, crome, zalza, radix, arachno, MrGamer, 8bitbubsy, rez, JosSs, seablue, Soft Maniac, coma, maktone, cerror, LHS/DFS, Ghidorah, Beldoroon, mark knight/The Dark Knight, Zabutom, Razor1911, Conspiracy/CPY, fitgirl, strict9, Nick Skarny, Wanadev Studio, JamieDerg
